# shadow-of-fire

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameClock.h  README.md  Scene.cpp  Scene.h  main.cpp
assets/maps/: map-01.json  map-01.tmx
assets/maps/tilesets/: cave.tsx
